--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body{
 
 .header{
 	font-size: 35px;
-	font-family: ALBA;
+	font-family: Lucida Handwriting;
 	color: black;
 	text-align: center;
 	padding: 10px;
